--- a/ControlUnit/07_01.md
+++ b/ControlUnit/07_01.md
@@ -64,7 +64,7 @@ S2 : IR ← MDR
 
 #### 특징
 
--   제어 유니트는 datapth를 제어하기 위한
+-   제어 유니트는 datapath를 제어하기 위한
     **축소된 컴퓨터**(miniature computer),
     **프로그램 내장형 컴퓨터**(stored-program computer)
 -   **_microprogramming_** →
@@ -144,7 +144,7 @@ A2 : IR ← MDR
 
 -   명령어 레지스터(IR)로부터 읽혀진 op-code를 해독한다.
 -   해독된 연산을 실행하기 위한
-    마이크로서브루팀의 시작 주소를 결정한다.
+    마이크로서브루틴의 시작 주소를 결정한다.
 
 ### 제어 주소 레지스터 _CAR_, _Control Address Register_
 
