--- a/ControlUnit/07_01.md
+++ b/ControlUnit/07_01.md
@@ -1,6 +1,6 @@
 ###### CS / [CA](../README.md) / [CU](./ControlUnit.md) / 7주차
 
-# 제어 유니트의 제어 방식과 기능 및 구조
+# 1. 제어 유니트의 제어 방식과 기능 및 구조
 
 ## 하드와이어 제어(Hardwired Control)
 
