--- a/ControlUnit/07_02.md
+++ b/ControlUnit/07_02.md
@@ -111,7 +111,7 @@ Zero        : 누산기에 저장된 데이터가 '0'이면 분기
 조건 필드의 내용에 종속되어 있다.
 조건이 맞지 않다면 쓰레기값이 된다.
 
-##### JUMP
+##### JMP
 
 조건에 따라 `CAR`의 내용을 주소필드(`ADF`)의 값
 혹은 `CAR + 1`의 값으로 저장한다.
@@ -134,7 +134,7 @@ Zero        : 누산기에 저장된 데이터가 '0'이면 분기
 
 | 코드 |  기호  | 설명                                                                        |
 | :--: | :----: | --------------------------------------------------------------------------- |
-| `00` | `JUMP` | `조건 = 1`이면 `CAR ← ADF`<br>`조건 = 0`이면 `CAR ← CAR + 1`                |
+| `00` | `JMP`  | `조건 = 1`이면 `CAR ← ADF`<br>`조건 = 0`이면 `CAR ← CAR + 1`                |
 | `01` | `CALL` | `조건 = 1`이면 `CAR ← ADF, SBR ← CAR + 1`<br>`조건 = 0`이면 `CAR ← CAR + 1` |
 | `10` | `RET`  | `CAR ← SBR` 서브루틴으로부터의 복귀                                         |
 | `11` | `MAP`  | `CAR(6) ← "1"`, `CAR(5..2) ← IR(op-code)`, `CAR(1,0) ← "0"`                 |
