--- a/ControlUnit/07_01.md
+++ b/ControlUnit/07_01.md
@@ -1,4 +1,4 @@
-###### CS / [CA](../README.md) / [CU](./ControlUnit.md) / 7주차
+###### CS / [CA](../README.md) / [CU](./README.md) / 7주차
 
 # 1. 제어 유니트의 제어 방식과 기능 및 구조
 
