--- a/ControlUnit/07_02.md
+++ b/ControlUnit/07_02.md
@@ -1,4 +1,4 @@
-###### CS / [CA](../README.md) / [CU](./ControlUnit.md) / 7주차
+###### CS / [CA](../README.md) / [CU](./README.md) / 7주차
 
 # 2. 마이크로프로그램
 
