--- a/ControlUnit/07_03.md
+++ b/ControlUnit/07_03.md
@@ -1,4 +1,4 @@
-###### CS / [CA](../README.md) / [CU](./ControlUnit.md) / 7주차
+###### CS / [CA](../README.md) / [CU](./README.md) / 7주차
 
 # 3. 마이크로프로그램 실행 순서 제어
 
